--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ a {
     list-style: none; 
     line-height: 30px; 
     margin-bottom: 30px;
-    
+    font-size: 14px;
 }
 
 button {
@@ -30,6 +30,7 @@ button {
     background-color:#000;
     color: #fff;
     height: 32px; 
+    font-size: 13px;
 }
 
 .hire {
@@ -47,10 +48,11 @@ button {
 
 .border-left {
     border-left: 2px solid #69696a;
-    float: left; 
-    padding: 15px;
+    padding-left: 15px;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 .scroll {
-    margin-top: 200px; 
+    margin-top: 25px;
 }
