--- a/style.css
+++ b/style.css
@@ -6,20 +6,17 @@
 
 body {
     background-color: #f9fafc;
-    padding: 25px;
+    padding: 15px;
+    height: 100vh; 
 }
 
 a {
     text-decoration: none;
     color:  #69696a;
-
 }
 
-.navbar {
-    list-style: none; 
-    line-height: 30px; 
-    margin-bottom: 30px;
-    font-size: 14px;
+.links {
+    list-style-type: none;
 }
 
 button {
@@ -33,13 +30,6 @@ button {
     font-size: 13px;
 }
 
-.hire {
-    margin-top: 10px; 
-}
-
-.header {
-    margin-bottom: 25px;
-}
 
 .border-left {
     color: #69696a;  
@@ -53,6 +43,118 @@ button {
     padding-bottom: 0;
 }
 
+.links {
+    display: flex;
+    flex-direction: column;
+    line-height: 30px;
+}
+
+.navlogo {
+    line-height: 30px;
+    list-style-type: none; 
+}
+
+.hire {
+    margin-bottom: 20px;
+}
+
+.header {
+    margin-bottom: 20px;
+}
+
 .scroll {
-    margin-top: 25px;
+    margin-top: 20px;
+}
+
+@media screen and (min-width: 768px) {
+
+body {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
+.navbar {
+    display: flex; 
+    justify-content: flex-end; 
+    width: 100%; 
+}
+
+.navlogo {
+    display: flex; 
+    justify-content: flex-start;
+    flex-grow: 1;  
+}
+
+.hire {
+    width: 100px;
+    margin-left: 10px; 
+}
+
+.links {
+    padding-left: 10px;
+}  
+
+.scroll {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    bottom: 2%; 
+    position: fixed; 
+}
+
+.scroll-button {
+    width: 100px; 
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.circles {
+    width: 50%;
+    position: relative;
+    margin-top: 325px; 
+    display: flex;
+}
+
+.circle1 {
+    display: block;
+    height: 100px;
+    width: 100px;
+    background-color: rgba(247, 193, 162, 0.7);
+    border-radius: 50%; 
+    position: absolute;
+    right: 50px;
+    bottom: 0px;
+}
+
+.circle2 {
+    display: block;
+    height: 175px;
+    width: 175px;
+    background-color: rgba(247, 136, 167, 0.6); 
+    border-radius: 50%; 
+    position: absolute;
+    bottom: 40px;
+    right: 80px;
+}
+
+.circle3 {
+    display: block;
+    height: 75px;
+    width: 75px;
+    background-color:rgba(207, 130, 213, 0.6);
+    border-radius: 50%;
+    position: absolute;
+    bottom: 70px;
+    right: 40px;
+} 
+
+.border-left {
+    width: 50%;
+}
+
 }
